@@ -1,6 +1,8 @@
 ver 0.17.2 (2012/??/??)
 * protocol:
   - fix crash in local file check
+* output:
+  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
 * mapper: fix non-UTF8 music directory name
 
 
